--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Arthur Azevedo <arthur.rios.az@hotmail.com>
 Maintainer: Arthur Azevedo <arthur.rios.az@hotmail.com>
 Description: Some elementary functions of Matrix analysis.
-License: What license is it under?
-Encoding: GPL-3
+License: GPL-3
+Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
